objects/FSL_Form_Linked_Section_Data__c.object
<CustomObject>
    <fields>
        <fullName>Acknowledgement__c</fullName>
        <label>Acknowledgement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I have read and agree to follow the controls outlined in the Risk Assessment</fullName>
                </value>
                <value>
                    <fullName>I have immediately notified my Supervisor or Site Leader if additional hazards have been identified or existing control measures require review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_By__c</fullName>
        <label>Action By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Required__c</fullName>
        <label>Action Required</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consequence_Rating__c</fullName>
        <label>Consequence Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insignificant</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Catastrophic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corrective_or_Preventative_Actions__c</fullName>
        <label>Corrective or Preventative Actions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Available_Working_Hours__c</fullName>
        <label>Employee Available Working Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Time_to_Destination__c</fullName>
        <label>Estimated Time to Destination</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Form</label>
        <referenceTo>disco__Form__c</referenceTo>
        <relationshipLabel>Form Linked Section Data</relationshipLabel>
        <relationshipName>Form_Linked_Section_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hazard_Controls_or_Actions__c</fullName>
        <label>Hazard Controls or Actions</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_of_Control__c</fullName>
        <label>Hierarchy of Control</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Elimination</fullName>
                </value>
                <value>
                    <fullName>Substitution</fullName>
                </value>
                <value>
                    <fullName>Isolation</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>PPE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_Since_Last_10hr_Break__c</fullName>
        <label>Hours Since Last 10hr Break</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Worked_in_Past_24hrs__c</fullName>
        <label>Hours Worked in Past 24hrs</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Step__c</fullName>
        <label>Job Step</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KM_to_Destination__c</fullName>
        <label>KM to Destination</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Likelihood_Rating__c</fullName>
        <label>Likelihood Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Almost Certain</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Occasional</fullName>
                </value>
                <value>
                    <fullName>Unlikely</fullName>
                </value>
                <value>
                    <fullName>Rare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <label>Position Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Hazard__c</fullName>
        <label>Potential Hazard</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Person__c</fullName>
        <label>Responsible Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rest_Stop_Destination__c</fullName>
        <label>Rest Stop Destination</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Rating__c</fullName>
        <label>Risk Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supervisor_Initials__c</fullName>
        <label>Supervisor Initials</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Date__c</fullName>
        <label>Technician Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technician_Name__c</fullName>
        <label>Technician Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_of_Supervisor_Check_In__c</fullName>
        <label>Time of Supervisor Check In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WWID__c</fullName>
        <label>WWID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Form Linked Section Data</label>
    <nameField>
        <label>Form Linked Section Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Linked Section Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>